# LibreSynergy

./: .gitignore  CHANGELOG.md  Caddyfile  LICENSE  MANIFESTO.md  README.md  apply-branding.sh  docker-compose.yml  libresynergy.env.example  pyproject.toml
api/: app.py  auth.py  database.py  federation.py  matrix_rooms.py  models.py  payments.py  tiers.py
cli/: authentik_setup.py  branding.py  btcpay_setup.py  config.py  main.py  stripe_setup.py
compose/: 00-edge.yml  10-auth.yml  20-chat.yml  30-learn.yml  40-meet.yml  45-stream.yml  50-payments.yml  55-btcpay.yml  60-files.yml  65-tracker.yml  66-reels.yml  70-admin.yml  authentik-theme.css
discovery/: app.py
docs/: PROOF-minecraft.md  add-a-service.md  architecture-mesh.md  architecture.md  attested-peering.md  branding-pipeline.md  design-system.md  discoverability.md  livestreaming.md  monero.md  operations.md  peertube-layer.md  quickstart.md  reels.md  roadmap.md  security.md  self-host-minecraft.md  solana-usdc.md
k8s/: deployments.yaml  ingress.yaml  namespace.yaml
libresynergy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mesh/: agentfacts.py  attest.py  content_sign.py  course.mjs  hwroot.py  mesh-up.sh  peer.py  rendezvous.py  segment_relay.py  swarm-shard.mjs  swarm.mjs  tracker.mjs  wg-punch.py
routing/: README.md
scripts/: apply-branding.sh  bootstrap-node.sh  bootstrap-vps.sh  cf-dns-sync.sh  deploy-node.sh  gen-secrets.sh  preflight.sh  scaffold-matrix.sh
secrets/: auth-secrets.env.example  authentik.env.example  bridge.env.example  btcpay-server.env.example  (+9 more)
(+73 files in other folders)
