[project]
name = "libresynergy"
version = "0.1.0"
description = "Federated learning community suite — one command to deploy your own online school"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "httpx>=0.25",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
libresynergy = "cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["cli*", "api*"]
